# loguru-suite

./: .env.example  .gitignore  ARCHITECTURE_CLEANUP_SUMMARY.md  README.md  loguru-suite.code-workspace  pyproject.toml  sys.stdout  test_sls_plugin.py  重构完成总结.md
.github/workflows/: README.md  ci.yml  publish.yml
discuss/: monorepo-and-plugin-architecture-plan.md  release_strategy.md
docs/: PYPI_PUBLISH.md  SLS日志字段上报方案建议.md  api-reference.md  configuration-guide.md
examples/: sys.stderr
examples-backup/: .env.example  README.md  pyproject.toml  sys.stderr
examples-backup/configs/: logging.yaml
examples-backup/src/: main.py  test_sls_connection.py
examples-backup/src/configs/: logging.yaml  logging_dev.yaml  logging_prod.yaml
examples-backup/src/examples-old/: __init__.py  comparison.py  config_driven.py  direct_sink.py  hybrid_usage.py  multi_environment.py
examples/basic-demo/: README.md  install_and_run.sh  logging.yaml  main.py  pyproject.toml  sync_and_run.sh  sys.stdout
examples/configs/: logging.yaml
examples/enterprise-demo/: .env.example  README.md  check_sls_logs.py  install_and_run.sh  logging.yaml  main.py  pyproject.toml  sync_and_run.sh  sys.stdout
examples/enterprise-demo/src/: __init__.py  config.py  demos.py  validates.py
examples/plugin-demo/: main.py
examples/plugin-usage/: README.md  main.py  pyproject.toml
examples/scripts/: run_examples.sh
examples/simple-usage/: README.md  main.py  pyproject.toml  test_plugins.py
examples/src/: test_sls_connection.py  usage_example.py
logs/: loguru_native.json
scripts/: install.sh  publish.sh  run-example.sh  run_tests.py
