[project]
name = "yai-loguru-sinks-examples"
version = "0.1.0"
description = "Usage examples for yai-loguru-sinks"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "yai-loguru-sinks",
    "loguru",
    "loguru-config",
    "pyyaml",
]

[tool.uv.sources]
yai-loguru-sinks = { workspace = true }

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]