[project]
name = "basic-demo"
version = "0.1.0"
description = "Basic demo for yai-loguru-sinks"
authors = [
    {name = "YAI Team", email = "team@yai.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "loguru>=0.7.0",
    "yai-loguru-sinks",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.uv.sources]
yai-loguru-sinks = { workspace = true }