[project]
name = "yai-loguru-plugin-usage-example"
version = "0.1.0"
description = "Plugin usage example for yai-loguru"
authors = [
    {name = "YAI Team", email = "dev@yai.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "loguru>=0.7.0",
    "yai-loguru>=0.3.7",
    "yai-loguru-file-sink>=0.1.0",
    "yai-loguru-sls-sink>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"