[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loguru-simple-usage-example"
version = "0.1.0"
description = "Simple Loguru usage example demonstrating basic logging features"
authors = [
    { name="YAI-Nexus", email="contact@yai-nexus.com" },
]
license = { file = "../../LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Logging",
]
dependencies = [
    "loguru>=0.7.0",
    "yai-loguru",
]

[project.urls]
Homepage = "https://github.com/yai-nexus/loguru-suite"
Repository = "https://github.com/yai-nexus/loguru-suite"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]